src/components/App.css
/* ... */
.Nav > li > a:link { 
  text-decoration: none; 
  color: #403d3b;
  font-size: 1.5vw;
}

.Nav > li > a:visited { 
  text-decoration: none; 
  color: #403d3b;
}

.Nav > li > a:hover { 
  text-decoration: none; 
  color: #000000;
  font-weight:800;
}

.Nav > li > a:active { 
  text-decoration: none; 
}

.Row {
  height: 100%;
  width: 100%;
}

@media only screen and (max-width: 1023px) {
  .App-header {
    position: absolute;
    top: 20%;
    left: 30%;
    right: 30%;
    text-align: center;
  }
  .Intro-header h1 {
    font-size: 5vw;
  }
  .Intro-header p {
    font-size: 2.5vw;
  }
  .Dot {
    position:absolute;
    top:35%;
  }
  .Background > p {
    position:absolute;
    font-size: 2vw;
    top:80%;
    font-family: Outfit;
  }
  .Background {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
}

@media only screen and (min-width: 1024px) {
  .Intro-header h1{
    font-size: 2.5vw;
  }
  .Intro-header p{
    font-size: 1.5vw;
  }
  .Dot {
    position:absolute;
    top:30%;
    right: 10%;
  }
  .Background > p {
    position:absolute;
    font-size: 2vw;
    top:65%;
    left: 20%;
    font-family: Outfit;
  }
  .App-header {
    position: absolute;
    top: 30%;
    left: 10%;
    text-align: left;
  }
  .Resume {
    position: absolute;
    top: 30%; 
    right: 20%;
  }
}

.App-header {
  font-size: 5vw;
  color: #403d3b;
  font-family: 'Outfit', sans-serif;
  font-weight:bold;
  line-height: 0.5;
  z-index: 100;
  padding: 0; 
  margin: 0;
}

.Dot {
  position:absolute;
  background-color: #b9b1ad;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
  border-radius: 50%;
  width: 40vh;
  height: 40vh;
}

.Background.first > span {
  opacity: 0;
  transform: translateX(150%);
}

.Scroll-container {
  position: absolute;
  top:0;
  left:0;
  height: 100vw;
  width: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  transform: rotate(-90deg) translateX(-100vh);
  transform-origin: left top;
  white-space: nowrap;
}

.Background {
  width: 100vw;
  height: 100vh;
}

.Spacer.first {
  position: sticky;
  bottom: 0;
  width: 100vh;
  height: 100vw;
  transform-origin: left top;
  transform: rotate(90deg) translateY(-100vh) translateX(100vh - 100vw);
}

.Spacer.second {
  width: 100vw;
  height: 100vh;
  /* transform-origin: left top;
  transform: rotate(90deg) translateY(-100vh) translateX(-300vh); */
}

.Background.first {
  z-index: 3;
  background-color: #f6e5d0;
  position: sticky;
  bottom: 0;
  transform: rotate(90deg) translateY(-100vh);
  transform-origin: left top;
  width: 100vw;
}

.Background.second {
  z-index: 2;
  background-color: #eed9c4;
  position: sticky;
  bottom: 0;
  width: 100vw;
  transform: rotate(90deg) translateY(-100vh) translateX(calc(100vh - 100vw));
  transform-origin: left top;
}

.Background.third {
  background-color: #e4d5b7;
  position: sticky;
  bottom: 0;
  width: 100vw;
  transform: rotate(90deg) translateY(-100vh) translateX(calc(100vh - 100vw));
  transform-origin: left top;
}

.Scroll-container > div > p.reveal {
  transform: translateX(0);
  transition: all ease-in 1s;
  transition-delay: 0.5s;
  opacity: 1;
}

.Dot > img{
  position: absolute;
  top: 25%;
  left: 25%;
  width: 50%;
  height: 50%;
}

.image1 {
  opacity: 0;
  transform: translateX(150%);
}

.Scroll-container > div > span > img.reveal {
  transform: translateX(0);
  opacity: 1;
  transition: all ease-in 1s;
}

.Scroll-container > div > span.reveal {
  transform: translateX(0);
  opacity: 1;
  transition: all ease-in 1s;
}

.Scroll-container::-webkit-scrollbar {
  display: none;
}

.Background > p {
  position:absolute;
  font-size: 2vw;
  font-family: Outfit;
}

.Background.first > p {
  transform: translateX(-150%);
  opacity: 0;
}

.About-wrapper {
  position: absolute;
  top: 95vh;
  left: 5vw;
  right: 5vw;
  min-height: 50vh;
  width: 90vw;
  background-color: white;
  padding-top: 8vh;
  padding-bottom: 8vh;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  padding-left: 0;
  border-radius: 55px;
}

.About {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
  min-height: 45vh;
  padding-left: 10%;
  padding-right: 10%;
}

.About img {
  width: 30vh;
  height: 30vh;
  border-radius: 50%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.Intro-header {
  font-family: Outfit;
  max-width: 70%;
  text-align: center;
}

.Intro-header h1 {
  font-weight: bold;
  transform: translateY(100%);
  opacity: 0;
}

.Intro-header p {
  transform: translateY(50%);
  opacity: 0;
  overflow-y: scroll;
  text-align: justify;
}

.Intro-header p::-webkit-scrollbar {
  display: none;
}

.About img{
  transform: translateY(50%);
  opacity: 0;
  margin: 0;
}

.Intro-header p.reveal {
  transform: translateY(0);
  opacity: 1;
  Transition: all ease-in 1.5s;
}

.About img.reveal{
  transform: translateY(0);
  opacity: 1;
  Transition: all ease-in 1.5s;
}

.Intro-header h1.reveal {
  transform: translateY(0);
  opacity: 1;
  Transition: all ease-in 1.5s;
}

.Links{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding-left: 40%;
  padding-right: 40%;
  opacity: 0;
}

.Links img {
  width: 8vh;
  height: 8vh;
  transform: scale(0.8);
  border-radius: 50%;
  padding-left: 2vw;
  padding-right: 2vw;
  object-fit: cover;
}

.Links.reveal {
  transform: translateY(0);
  opacity: 1;
  transition-delay: 2s;
  transition: all ease-in 1.5s;
}

.Links img:hover {
  transform: scale(1);
}

.Profile {
  margin-right: 5vh;
  margin-left: 15vh;
}

.Projects {
  position: relative;
  left: 0;
  min-height: 150vh;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1.5vw;
  font-family: Outfit;
  font-weight: bold;
  z-index: -1;
}

.Project-header {
  background-color: rgb(210, 179, 184);
  position: relative;
  font-size: 2.5vw;
}
/* ... */

